--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,11 @@ reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tower = "0.5.2"
 tower-http = { version = "0.6.6", features = [
     "fs",
     "compression-zstd",
+    "normalize-path"
 ] }
 tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
